--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@inertiajs/react": "^2.0.8",
         "@vitejs/plugin-react": "^4.4.1",
+        "date-fns": "^4.1.0",
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
         "sweetalert2": "^11.19.1"
