--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "@inertiajs/react": "^2.0.8",
         "@vitejs/plugin-react": "^4.4.1",
         "date-fns": "^4.1.0",
+        "leaflet": "^1.9.4",
         "react-dom": "^19.1.0",
+        "react-dropzone": "^14.3.8",
         "react-icons": "^5.5.0",
+        "react-leaflet": "^5.0.0",
         "sweetalert2": "^11.19.1"
     }
 }
