--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-dropzone": "^14.3.8",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0",
+        "react-modal": "^3.16.3",
         "sweetalert2": "^11.19.1"
     }
 }
