--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "test": "jest"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.28.0",
+        "@babel/preset-react": "^7.27.1",
         "@tailwindcss/vite": "^4.0.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
         "@types/react-dom": "^19.1.2",
         "axios": "^1.8.2",
+        "babel-jest": "^30.0.4",
         "concurrently": "^9.0.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^30.0.4",
+        "jest-environment-jsdom": "^30.0.4",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.2.4"
